WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190495
Hardware keyboard arrow keys/spacebar don't scroll PDFs (works for web content)
https://bugs.webkit.org/show_bug.cgi?id=190495
Summary
Hardware keyboard arrow keys/spacebar don't scroll PDFs (works for web content)
Tim Horton
Reported
2018-10-11 15:20:17 PDT
Hardware keyboard arrow keys/spacebar don't scroll PDFs (works for web content)
Attachments
Patch
(16.73 KB, patch)
2018-10-11 15:21 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.55 KB, patch)
2018-10-11 15:23 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.64 KB, patch)
2018-10-11 16:02 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.64 KB, patch)
2018-10-11 16:03 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-10-11 15:21:57 PDT
Created
attachment 352091
[details]
Patch
Tim Horton
Comment 2
2018-10-11 15:21:59 PDT
<
rdar://problem/22734616
>
Tim Horton
Comment 3
2018-10-11 15:22:31 PDT
Comment on
attachment 352091
[details]
Patch The new files are missing...
Tim Horton
Comment 4
2018-10-11 15:23:10 PDT
Created
attachment 352092
[details]
Patch
Andy Estes
Comment 5
2018-10-11 15:38:11 PDT
Comment on
attachment 352092
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=352092&action=review
> Source/WebKit/UIProcess/ios/WKPDFView.mm:85 > + ::WebEvent *webEvent = [[[WKWebEvent alloc] initWithEvent:event] autorelease];
auto webEvent = adoptNS(...?
Tim Horton
Comment 6
2018-10-11 15:59:00 PDT
Sure why not
Tim Horton
Comment 7
2018-10-11 16:02:34 PDT
Created
attachment 352097
[details]
Patch
Tim Horton
Comment 8
2018-10-11 16:03:44 PDT
Created
attachment 352098
[details]
Patch
Tim Horton
Comment 9
2018-10-11 16:41:36 PDT
https://trac.webkit.org/changeset/237053/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug